# XRecordGrab

./: .gitignore  CMakeLists.txt  README.md  format_shortcut.go  grab.go  main.go  record.c  wrap.go
src/: key.c  key.h  main.c  record.c  record.h
